[package]
name = "embassy-rp-broken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-sync = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "aea5a0fd96c1901403e62bac5c1890debd41d22e", features = ["defmt"] }
embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "aea5a0fd96c1901403e62bac5c1890debd41d22e", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "aea5a0fd96c1901403e62bac5c1890debd41d22e", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "aea5a0fd96c1901403e62bac5c1890debd41d22e", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "pio", "critical-section-impl"] }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "aea5a0fd96c1901403e62bac5c1890debd41d22e", features = ["defmt"] }
embassy-net = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "aea5a0fd96c1901403e62bac5c1890debd41d22e", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "aea5a0fd96c1901403e62bac5c1890debd41d22e" }
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "aea5a0fd96c1901403e62bac5c1890debd41d22e" }

rp-pico = "0.6"
rp2040-hal = "0.7"

heapless = { version = "0.7", features = ["defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.9" }
embedded-hal-async = "0.2.0-alpha.0"
embedded-nal = "0.6"
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
nb = { version = "1" }
static_cell = "1.0.0"
pio-proc = "0.2"
pio = "0.2.1"

[profile.release]
debug = true
